# uv-pyo3

./: .gitignore  Cargo.toml  LICENSE  README.md  build.py  hello.py  pyproject.toml
src/: main.rs
