[package]
name = "uv-pyo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
polars = { version = "0.43", features = ["lazy"] }
pyo3 = "0.22.3"
pyo3-polars = { git = "https://github.com/pola-rs/pyo3-polars.git" }
reqwest = "0.12.7"
tokio = { version = "1.40.0", features = ["fs", "macros", "rt-multi-thread"] }
